fix workspace file config

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,7 @@
 image:
   file: Dockerfile
 
-workspaceLocation: canvas/.workspace.json
+workspaceLocation: canvas/canvas.code-workspace
 checkoutLocation: canvas
 
 vscode:
